--- a/index.html
+++ b/index.html
@@ -2,161 +2,148 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>風味便當外送</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>手作飾品市場調查問卷</title>
   <style>
     body {
-      font-family: "Helvetica Neue", sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      color: #333;
-    }
-
-    header {
-      background-image: url('header-image.jpg');
-      background-size: cover;
-      color: white;
-      text-align: center;
-      padding: 100px 20px;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      margin: 10px 0;
-    }
-
-    .section {
-      padding: 50px 20px;
-      max-width: 1200px;
+      font-family: 'Microsoft JhengHei', sans-serif;
+      background: #fefefe;
+      padding: 30px;
+      max-width: 700px;
       margin: auto;
     }
 
-    .section-title {
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 30px;
+    h1 {
+      color: #333;
+      margin-bottom: 10px;
     }
 
-    .menu-grid, .testimonial-grid, .features-grid {
-      display: grid;
-      gap: 20px;
-    }
-
-    .menu-grid {
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
-
-    .testimonial {
+    form {
       background: #f9f9f9;
-      padding: 20px;
       border-radius: 8px;
-    }
-
-    .feature {
-      text-align: center;
-    }
-
-    .map {
-      width: 100%;
-      height: 400px;
-      background-color: #eee;
-    }
-
-    footer {
-      background: #222;
-      color: white;
-      text-align: center;
       padding: 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
 
-    button.cta {
-      background: orange;
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+
+    input[type="text"],
+    select,
+    textarea {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .checkbox-group,
+    .radio-group {
+      margin-top: 5px;
+    }
+
+    .checkbox-group input,
+    .radio-group input {
+      margin-right: 6px;
+    }
+
+    button {
+      margin-top: 20px;
+      background-color: #4CAF50;
       color: white;
       padding: 10px 20px;
       border: none;
-      font-size: 1rem;
-      border-radius: 5px;
+      border-radius: 4px;
       cursor: pointer;
     }
 
-    @media (max-width: 768px) {
-      header h1 {
-        font-size: 2rem;
-      }
+    button:hover {
+      background-color: #45a049;
+    }
 
-      .section-title {
-        font-size: 1.5rem;
-      }
+    #result {
+      margin-top: 30px;
+      padding: 15px;
+      background: #e8f5e9;
+      border-left: 4px solid #4CAF50;
+      display: none;
     }
   </style>
 </head>
 <body>
+  <h1>手作飾品市場調查問卷</h1>
+  <form id="surveyForm">
+    <label>姓名（選填）</label>
+    <input type="text" name="name">
 
-<header>
-  <h1>風味與份量兼具的特色便當</h1>
-  <p>來份「超值的」便當外送，只要 NT$250 起</p>
-  <button class="cta" onclick="scrollToSection('menu')">查看菜單</button>
-</header>
+    <label>您平時喜歡配戴哪種類型的飾品？（可複選）</label>
+    <div class="checkbox-group">
+      <label><input type="checkbox" name="type" value="項鍊"> 項鍊</label>
+      <label><input type="checkbox" name="type" value="手鍊 / 手環"> 手鍊 / 手環</label>
+      <label><input type="checkbox" name="type" value="戒指"> 戒指</label>
+      <label><input type="checkbox" name="type" value="耳環"> 耳環</label>
+      <label><input type="checkbox" name="type" value="髮飾"> 髮飾</label>
+    </div>
 
-<section class="section" id="highlights">
-  <h2 class="section-title">熱門菜單推薦</h2>
-  <div class="menu-grid">
-    <div><img src="menu1.jpg" width="100%"><p>照燒雞腿便當</p></div>
-    <div><img src="menu2.jpg" width="100%"><p>鮭魚蔬食便當</p></div>
-    <div><img src="menu3.jpg" width="100%"><p>義式香料雞</p></div>
-    <div><img src="menu4.jpg" width="100%"><p>經典牛肉飯</p></div>
-  </div>
-</section>
+    <label>您偏好的飾品風格是？（可複選）</label>
+    <div class="checkbox-group">
+      <label><input type="checkbox" name="style" value="簡約極簡風"> 簡約極簡風</label>
+      <label><input type="checkbox" name="style" value="文青手作風"> 文青手作風</label>
+      <label><input type="checkbox" name="style" value="韓系甜美風"> 韓系甜美風</label>
+      <label><input type="checkbox" name="style" value="日系可愛風"> 日系可愛風</label>
+      <label><input type="checkbox" name="style" value="復古古典風"> 復古古典風</label>
+      <label><input type="checkbox" name="style" value="個性暗黑風"> 個性暗黑風</label>
+    </div>
 
-<section class="section" id="features">
-  <h2 class="section-title">風味便當新鮮外送</h2>
-  <div class="features-grid" style="grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));">
-    <div class="feature"><h3>60道便當選擇</h3><p>多樣口味任你選擇</p></div>
-    <div class="feature"><h3>每日新鮮食材</h3><p>健康營養，當日現做</p></div>
-    <div class="feature"><h3>24H快速外送</h3><p>最快當日到貨</p></div>
-  </div>
-</section>
+    <label>您可以接受的預算範圍是？（單選）</label>
+    <div class="radio-group">
+      <label><input type="radio" name="budget" value="$100 以下"> $100 以下</label>
+      <label><input type="radio" name="budget" value="$100 ~ $300"> $100 ~ $300</label>
+      <label><input type="radio" name="budget" value="$300 ~ $500"> $300 ~ $500</label>
+      <label><input type="radio" name="budget" value="$500 ~ $1,000"> $500 ~ $1,000</label>
+      <label><input type="radio" name="budget" value="$1,000 以上"> $1,000 以上</label>
+    </div>
 
-<section class="section" id="testimonials">
-  <h2 class="section-title">顧客見證</h2>
-  <div class="testimonial-grid" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
-    <div class="testimonial"><p>「超快速的外送而且份量很足！」</p><small>- 小王</small></div>
-    <div class="testimonial"><p>「第一次訂餐就愛上了，每天中午都要吃一份。」</p><small>- 小美</small></div>
-    <div class="testimonial"><p>「餐點乾淨又好吃，價格也很可以接受！」</p><small>- 阿信</small></div>
-  </div>
-</section>
+    <label>有什麼想對我們說的嗎？</label>
+    <textarea name="feedback" rows="4" placeholder="請輸入您的建議或喜好款式..."></textarea>
 
-<section class="section" id="menu">
-  <h2 class="section-title">便當菜單</h2>
-  <div class="menu-grid">
-    <div><img src="bento1.jpg" width="100%"><p>清燉雞腿便當<br>NT$150</p></div>
-    <div><img src="bento2.jpg" width="100%"><p>綠野蔬食便當<br>NT$150</p></div>
-    <div><img src="bento3.jpg" width="100%"><p>韓式泡菜豬便當<br>NT$140</p></div>
-    <div><img src="bento4.jpg" width="100%"><p>莓果水果便當<br>NT$140</p></div>
-  </div>
-</section>
+    <button type="submit">送出問卷</button>
+  </form>
 
-<section class="section">
-  <h2 class="section-title">餐廳地址</h2>
-  <div class="map" id="map">[地圖嵌入區塊]</div>
-  <p>地址：台北市大安區光復南路 XXX 號<br>電話：02-XXXX-XXXX</p>
-</section>
+  <div id="result"></div>
 
-<footer>
-  <p>&copy; 2025 風味便當外送</p>
-</footer>
+  <script>
+    document.getElementById("surveyForm").addEventListener("submit", function (e) {
+      e.preventDefault();
 
-<script>
-  function scrollToSection(id) {
-    const section = document.getElementById(id);
-    section.scrollIntoView({ behavior: 'smooth' });
-  }
-</script>
+      const formData = new FormData(this);
+      let resultText = "<h3>您已成功提交以下內容：</h3>";
 
+      const name = formData.get("name") || "（未填寫）";
+      resultText += "<strong>姓名：</strong> " + name + "<br>";
+
+      const types = formData.getAll("type");
+      resultText += "<strong>飾品類型：</strong> " + (types.length ? types.join(", ") : "（未選擇）") + "<br>";
+
+      const styles = formData.getAll("style");
+      resultText += "<strong>風格偏好：</strong> " + (styles.length ? styles.join(", ") : "（未選擇）") + "<br>";
+
+      const budget = formData.get("budget") || "（未選擇）";
+      resultText += "<strong>預算範圍：</strong> " + budget + "<br>";
+
+      const feedback = formData.get("feedback") || "（無建議）";
+      resultText += "<strong>其他建議：</strong> " + feedback + "<br>";
+
+      const resultDiv = document.getElementById("result");
+      resultDiv.innerHTML = resultText;
+      resultDiv.style.display = "block";
+
+      this.reset();
+    });
+  </script>
 </body>
 </html>
